--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # geostatDB
 
 <!-- badges: start -->
+[![DOI](https://zenodo.org/badge/211865446.svg)](https://zenodo.org/badge/latestdoi/211865446)
 [![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)
 [![Travis build status](https://travis-ci.org/GeoStat-Bayesian/geostatDB.svg?branch=master)](https://travis-ci.org/GeoStat-Bayesian/geostatDB)
 [![Codecov test coverage](https://codecov.io/gh/GeoStat-Bayesian/geostatDB/branch/master/graph/badge.svg)](https://codecov.io/gh/GeoStat-Bayesian/geostatDB?branch=master)
